<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        style="@style/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/imageTitle"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_weight="2"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            >

            <Button
                style="@style/imageButton"
                android:id="@+id/catButton"
                android:text="@string/cat"
                android:onClick="onClickImage" />

            <Button
                style="@style/imageButton"
                android:id="@+id/towerButton"
                android:layout_below="@+id/catButton"
                android:text="@string/tower"
                android:onClick="onClickImage" />

            <Button
                style="@style/imageButton"
                android:id="@+id/compButton"
                android:layout_below="@+id/towerButton"
                android:text="@string/computer"
                android:onClick="onClickImage" />

            <Button
                style="@style/imageButton"
                android:id="@+id/sciButton"
                android:layout_below="@+id/compButton"
                android:text="@string/science"
                android:onClick="onClickImage" />

            <Button
                style="@style/imageButton"
                android:id="@+id/yearButton"
                android:layout_below="@+id/sciButton"
                android:text="@string/year"
                android:onClick="onClickImage" />


        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>