<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        style="@style/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="11"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/about"
            android:textSize="30dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/goku"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="6"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:layout_marginBottom="8dp"
            android:text="@string/dev"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:text="@string/austin"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/moreAbout"
            android:layout_margin="7dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:text="@string/email"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

</RelativeLayout>